--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,8 +27,6 @@
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-aria.min.js"></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
-
-
 <script src="js/personalTrack.js"></script>
 
 </head>
@@ -36,13 +34,17 @@
 	<div id="content">
 		<md-toolbar layout="row"> 
 			<span flex></span>
-			
-		<md-input-container class="white">
+		<md-input-container >
 			<label style="color:white;">Username:</label><input style="color:white;" type="text" >
 	    </md-input-container> 
 		<md-input-container>
 			<label style="color:white;">Password:</label> <input style="color:white;" type="text" > 
 		</md-input-container>
+		<md-button>
+  			Login
+		</md-button>
+		</md-toolbar>
+		
 		<div id="footer"></div>
 	</div>
 </body>
